--- a/example_2.ipynb
+++ b/example_2.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pd=pd.read_json('C://Users//thais//Downloads//ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json')"
+    "df_pd=pd.read_json('ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json')"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pl.read_json('C://Users//thais//Downloads//ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json')"
+    "df=pl.read_json('ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json')"
    ]
   },
   {
