style: black & fix comments

--- a/example_2.ipynb
+++ b/example_2.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl\n",
-    "from pprint import pprint\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import polars as pl"
    ]
   },
   {
@@ -17,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pl.read_json('ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json')"
+    "df = pl.read_json(\"ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json\")"
    ]
   },
   {
@@ -26,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pd=pd.read_json('ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json')"
+    "df_pd = pd.read_json(\"ShareGPT_V3_unfiltered_cleaned_split_no_imsorry.json\")"
    ]
   },
   {
@@ -112,14 +111,19 @@
     }
    ],
    "source": [
-    "# Take the first part of the struct as the questionner\n",
-    "df=df.with_columns(pl.col('conversations').list.first().alias('human')\n",
-    "                   # Unnest the struct and rename it\n",
-    "                ).unnest('human').rename({'from':'questionner', 'value':'question'}\n",
-    "                                         # Take the last part as the answerer\n",
-    "                                         ).with_columns(pl.col('conversations').list.last().alias('gpt')\n",
-    "                                                        # unnest and rename it\n",
-    "                                                        ).unnest('gpt').drop('conversations').rename({'from':'answerer', 'value': 'answer'})\n",
+    "df = (\n",
+    "    # Take the first part of the struct as the questionner\n",
+    "    df.with_columns(pl.col(\"conversations\").list.first().alias(\"human\"))\n",
+    "    # Unnest the struct and rename it\n",
+    "    .unnest(\"human\")\n",
+    "    .rename({\"from\": \"questionner\", \"value\": \"question\"})\n",
+    "    # Take the last part as the answerer\n",
+    "    .with_columns(pl.col(\"conversations\").list.last().alias(\"gpt\"))\n",
+    "    # unnest and rename it\n",
+    "    .unnest(\"gpt\")\n",
+    "    .drop(\"conversations\")\n",
+    "    .rename({\"from\": \"answerer\", \"value\": \"answer\"})\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -230,11 +234,11 @@
     }
    ],
    "source": [
-    "df_pd['questionner']=df_pd['conversations'].str.get(0).str.get(\"from\")\n",
-    "df_pd['answerer']=df_pd['conversations'].str.get(1).str.get('from')\n",
-    "df_pd['question']=df_pd['conversations'].str.get(0).str.get('value')\n",
-    "df_pd['answer']=df_pd['conversations'].str.get(1).str.get('value')\n",
-    "df_pd=df_pd.drop(columns='conversations')\n",
+    "df_pd[\"questionner\"] = df_pd[\"conversations\"].str.get(0).str.get(\"from\")\n",
+    "df_pd[\"answerer\"] = df_pd[\"conversations\"].str.get(1).str.get(\"from\")\n",
+    "df_pd[\"question\"] = df_pd[\"conversations\"].str.get(0).str.get(\"value\")\n",
+    "df_pd[\"answer\"] = df_pd[\"conversations\"].str.get(1).str.get(\"value\")\n",
+    "df_pd = df_pd.drop(columns=\"conversations\")\n",
     "df_pd.head()"
    ]
   },
@@ -276,12 +280,18 @@
     }
    ],
    "source": [
-    "# Just take questions under 5 words\n",
-    "df=df.with_columns(pl.col('question').str.split(' ').alias('number')\n",
-    "                ).filter(pl.col('number').list.len()<5\n",
-    "                         #Replace everything that is not alpha-numeric by spaces and drop nulls\n",
-    "                         ).drop('number'\n",
-    "                                ).with_columns(pl.col('question', 'answer').str.replace_all(r'[^a-zA-Z]', ' ')).drop_nulls()\n",
+    "df = (\n",
+    "    # Just take questions under 5 words\n",
+    "    df.with_columns(pl.col(\"question\").str.split(\" \").alias(\"number\"))\n",
+    "    .filter(pl.col(\"number\").list.len() < 5)\n",
+    "    .drop(\"number\")\n",
+    "    .with_columns(\n",
+    "        pl.col(\"question\", \"answer\")\n",
+    "        # Replace everything that is not alpha-numeric by spaces and drop nulls\n",
+    "        .str.replace_all(r\"[^a-zA-Z]\", \" \")\n",
+    "    )\n",
+    "    .drop_nulls()\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -385,16 +395,18 @@
     }
    ],
    "source": [
-    "df_pd['number'] = df_pd['question'].str.split(' ')\n",
-    "df_pd = df_pd[df_pd['number'].apply(lambda x: len(x) < 5 if isinstance(x, list) else False)]\n",
-    "df_pd = df_pd.drop(columns=['number'])\n",
+    "df_pd[\"number\"] = df_pd[\"question\"].str.split(\" \")\n",
+    "df_pd = df_pd[\n",
+    "    df_pd[\"number\"].apply(lambda x: len(x) < 5 if isinstance(x, list) else False)\n",
+    "]\n",
+    "df_pd = df_pd.drop(columns=[\"number\"])\n",
     "\n",
     "# Replace non-alphabetic characters in 'question' and 'answer' columns and drop nulls\n",
-    "df_pd['question'] = df_pd['question'].str.replace(r'[^a-zA-Z]', ' ', regex=True)\n",
-    "df_pd['answer'] = df_pd['answer'].str.replace(r'[^a-zA-Z]', ' ', regex=True)\n",
+    "df_pd[\"question\"] = df_pd[\"question\"].str.replace(r\"[^a-zA-Z]\", \" \", regex=True)\n",
+    "df_pd[\"answer\"] = df_pd[\"answer\"].str.replace(r\"[^a-zA-Z]\", \" \", regex=True)\n",
     "\n",
     "df_bis = df_pd.dropna()\n",
-    "df_bis.head()\n"
+    "df_bis.head()"
    ]
   }
  ],
