--- a/example_lazy_1.ipynb
+++ b/example_lazy_1.ipynb
@@ -16,20 +16,21 @@
    "outputs": [],
    "source": [
     "#scan parquet them convert timestamp column in to a Datetime format\n",
-    "df=(pl.scan_parquet('new_gps.parquet'\n",
-    "                    ).with_columns(\n",
-    "    pl.from_epoch(pl.col('timestamp'), 'ms')\n",
-    "                  # truncate it by the hour and filter for hour> 4\n",
-    "                    ).with_columns(\n",
-    "    pl.col('timestamp').dt.truncate(\"1h\")\n",
-    "                     )\n",
-    "                  #Then group_by by the hour and calculate the mean, the max and min of the speed column\n",
-    "                               ).group_by(pl.col('timestamp')\n",
-    "                    ).agg(pl.col('speed').mean().alias('mean_speed'),\n",
-    "                             pl.col('speed').min().alias('min_speed'),\n",
-    "                             pl.col('speed').max().alias('max_speed')\n",
-    "                  # Filter hour > 4\n",
-    "                    ).filter(pl.col('timestamp')>4)"
+    "df = (\n",
+    "    pl.scan_parquet(\"new_gps.parquet\")\n",
+    "    .with_columns(pl.from_epoch(pl.col(\"timestamp\"), \"ms\"))\n",
+    "    # truncate it by the hour\n",
+    "    .with_columns(pl.col(\"timestamp\").dt.truncate(\"1h\"))\n",
+    "    # Then group_by by the hour and calculate the mean, the max and min of the speed column\n",
+    "    .group_by(pl.col(\"timestamp\"))\n",
+    "    .agg(\n",
+    "        pl.col(\"speed\").mean().alias(\"mean_speed\"),\n",
+    "        pl.col(\"speed\").min().alias(\"min_speed\"),\n",
+    "        pl.col(\"speed\").max().alias(\"max_speed\"),\n",
+    "    )\n",
+    "    # Filter for hour > 4\n",
+    "    .filter(pl.col(\"timestamp\") > 4)\n",
+    ")"
    ]
   },
   {
@@ -79,16 +80,14 @@
     }
    ],
    "source": [
-    "lazy=(pl.scan_parquet('new_gps.parquet')).with_columns(pl.col('speed')*3.6).filter(pl.col('speed')>10).filter(pl.col('user_id')>2)\n",
+    "lazy = (\n",
+    "    (pl.scan_parquet(\"new_gps.parquet\"))\n",
+    "    .with_columns(pl.col(\"speed\") * 3.6)\n",
+    "    .filter(pl.col(\"speed\") > 10)\n",
+    "    .filter(pl.col(\"user_id\") > 2)\n",
+    ")\n",
     "print(lazy.explain())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
